# NightWatch

./: .env.example  .gitignore  README.md  ignore.yml  pyproject.toml
.claude/: OPENSPEC-claude-code-plugins.md  OPENSPEC-error-learning-system.md
docs/features/: COMPOUND-001-implementation-plan.md  CORE-001-self-health-report.md  PLUGIN-001-implementation-plan.md  README.md
nightwatch/: __init__.py  __main__.py  agents.py  analyzer.py  batch.py  config.py  correlation.py  github.py  guardrails.py  health.py  history.py  knowledge.py  models.py  newrelic.py  observability.py  patterns.py  prompts.py  quality.py  research.py  runner.py  slack.py  validation.py
nightwatch/agents/: __init__.py  _legacy.py  base-analyzer.md  base.py  error_analyzer.py  pattern_detector.py  registry.py  reporter.py  researcher.py  validator_agent.py
nightwatch/orchestration/: __init__.py  message_bus.py  pipeline.py  state_manager.py
nightwatch/types/: __init__.py  agents.py  analysis.py  core.py  messages.py  orchestration.py  patterns.py  reporting.py  validation.py
nightwatch/validation/: __init__.py  _legacy.py  orchestrator.py
tests/: conftest.py  factories.py  test_agents.py  test_analyzer.py  test_ci_doctor.py  test_github.py  test_guardrails.py  test_health.py  test_history.py  test_knowledge.py  test_knowledge_enhanced.py  test_models.py  test_patterns.py  test_patterns_workflow.py  test_quality.py  test_quality_gates.py  test_ranking.py  test_research.py  test_run_context.py  test_validation.py  test_workflows_base.py  test_workflows_errors.py  test_workflows_registry.py
(+69 files in other folders)
